--- a/translations/kangyur/translations/090-036_toh592,986-the_invincible_sitatapatra_1.xml
+++ b/translations/kangyur/translations/090-036_toh592,986-the_invincible_sitatapatra_1.xml
@@ -36,7 +36,7 @@
         <editor role="finalReviewer" xml:id="UT22084-090-036-337">David Fiordalis</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.4 <date>2023</date>
+                <edition>v 1.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -204,6 +204,12 @@
                 </change>
                 <change who="#sameer" when="2023-09-15T10:38:06.147Z" type="text-version" status="1.0.4" xml:id="UT22084-090-036-376">
                     <desc>Included in App v 3.4</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.0.5" xml:id="UT22084-090-036-377">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#celso" when="2023-12-14T18:52:39.357Z" type="text-version" status="1.0.6" xml:id="UT22084-090-036-378">
+                    <desc>added some soft hyphens to glossary</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -722,21 +728,21 @@
           <milestone unit="chunk" xml:id="UT22084-090-036-63"/>
           <lg tid="43">
             <l>“Homage to the blessed, thus-gone, worthy, completely perfect Buddha
-              Dṛḍhaśūraraṇasenapraharaṇarāja. <ref cRef="F.220.a" key="toh592" type="folio" xml:id="UT22084-090-036-301"/>
+              Dṛḍha­śūraraṇasena­praharaṇa­rāja. <ref cRef="F.220.a" key="toh592" type="folio" xml:id="UT22084-090-036-301"/>
                         </l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha Amitābha.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha Akṣobhya.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha
-              Bhaiṣajyaguruvaiḍūryaprabharāja.</l>
+              Bhaiṣajya­guru­vaiḍūrya­prabha­rāja.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha
-              Supuṣpitaśālendrārāja. Homage to the blessed, thus-gone, worthy, completely perfect
+              Supuṣpita­śālendrā­rāja. Homage to the blessed, thus-gone, worthy, completely perfect
               Buddha Śākyamuni.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha
               Ratnaketurāja.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha Samantabhadra. </l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha Vairocana. </l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha
-                Vikasitanetrotpalagandhaketurāja.<note place="end" xml:id="UT22084-090-036-64"> This
+                Vikasita­netrotpala­gandha­ketu­rāja.<note place="end" xml:id="UT22084-090-036-64"> This
                 Sanskrit rendering is tentative, as the Tibetan term used here differs slightly from
                 the Sanskrit sources. All Sanskrit sources consulted have
                 Vikasitakamalotpalagandhaketurāja, a term that aligns with the Tibetan translation
@@ -1311,7 +1317,7 @@
           <bibl xml:id="UT22084-090-036-150">Phangthangma (<title xml:lang="Bo-Ltn">dkar chag ’phang
               thang ma</title>). Beijing: mi rigs dpe skrun khang, 2003.</bibl>
           <bibl xml:id="UT22084-090-036-151">
-                        <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheBNF.php?vol=PT45&amp;beg=4">Pelliot tibétain 45</ref>. Bibliothèque nationale de France, Paris. <title xml:lang="en">Resources for Kanjur and Tenjur Studies</title>, Universität Wien.
+                        <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheBNF.php?vol=PT45&amp;beg=4">Pelliot tibétain 45</ref>. Bibliothèque nationale de France, Paris. <title xml:lang="en">Resources for Kanjur and Tanjur Studies</title>, Universität Wien.
             Accessed July 26, 2022.</bibl>
           <bibl xml:id="UT22084-090-036-152">Dudjom Jikdral Yeshé Dorjé (bdud ’joms ’jigs bral ye
             shes rdo rje). <title xml:lang="Bo-Ltn">gtsug tor gdugs dkar mo’i rgyun khyer ’bar ba’i
@@ -2286,8 +2292,8 @@
                     </item>
           <item>
                         <gloss type="person" xml:id="UT22084-090-036-245">
-                            <term type="translationMain">Dṛḍhaśūraraṇasenapraharaṇarāja</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">dṛḍhaśūraraṇasena­praharaṇa­rāja</term>
+                            <term type="translationMain">Dṛḍha­śūraraṇasena­praharaṇa­rāja</term>
+            <term xml:lang="Sa-Ltn" type="sourceUnspecified">dṛḍha­śūraraṇasena­praharaṇa­rāja</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dpa’ brtan pa’i sde mtshon cha’i rgyal po</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དཔའ་བརྟན་པའི་སྡེ་མཚོན་ཆའི་རྒྱལ་པོ།</term>
                             <note type="definition">
@@ -2321,10 +2327,10 @@
           </item>
           <item>
                         <gloss type="person" xml:id="UT22084-090-036-248">
-                            <term type="translationMain">Bhaiṣajyaguruvaiḍūryaprabharāja</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhaiṣajyaguruvaiḍūrya­prabharāja</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sman gyi bla bai dur+ya’i ’od kyi rgyal po</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">སྨན་གྱི་བླ་བཻ་དུརྱའི་འོད་ཀྱི་རྒྱལ་པོ།</term>
+                            <term type="translationMain">Bhaiṣajya­guru­vaiḍūrya­prabha­rāja</term>
+            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhaiṣajya­guru­vaiḍūrya­prabha­rāja</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sman gyi bla bai DUr+ya’i ’od kyi rgyal po</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">སྨན་གྱི་བླ་བཻ་ཌཱུརྱའི་འོད་ཀྱི་རྒྱལ་པོ།</term>
                             <note type="definition">
                                 <p>The full name of the buddha popularly known as the Medicine
                 Buddha. </p>
@@ -2333,10 +2339,10 @@
                     </item>
           <item>
                         <gloss type="person" xml:id="UT22084-090-036-249">
-                            <term type="translationMain">Supuṣpitaśālendrārāja</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">supuṣpita­śālendrārāja</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sa la’i dbang po’i rgyal po me tog kun tu rgyas pa</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">ས་ལའི་དབང་པོའི་རྒྱལ་པོ་མེ་ཏོག་ཀུན་ཏུ་རྒྱས་པ།</term>
+                            <term type="translationMain">Supuṣpita­śālendrā­rāja</term>
+            <term xml:lang="Sa-Ltn" type="sourceUnspecified">supuṣpita­śālendrā­rāja</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sA la’i dbang po’i rgyal po me tog kun tu rgyas pa</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">སཱ་ལའི་དབང་པོའི་རྒྱལ་པོ་མེ་ཏོག་ཀུན་ཏུ་རྒྱས་པ།</term>
                             <note type="definition">
                                 <p>The name of a buddha.</p>
                             </note>
@@ -2346,8 +2352,8 @@
             <gloss xml:id="UT22084-090-036-250" type="person" mode="match">
                             <term type="translationMain">Śākyamuni</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śākyamuni</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shakya thub pa</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">ཤཀྱ་ཐུབ་པ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shAkya thub pa</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">ཤཱཀྱ་ཐུབ་པ།</term>
                             <note type="definition" rend="override">
                                 <p>The “Sage of the Śākyas,” the name of the Buddha of our era,
                 who lived ca. 563–483 <hi rend="small-caps">bce</hi>.</p>
@@ -2390,8 +2396,8 @@
                     </item>
           <item>
                         <gloss type="person" xml:id="UT22084-090-036-254">
-                            <term type="translationMain">Vikasitanetrotpalagandhaketurāja</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">vikasitanetrotpala­gandhaketurāja</term>
+                            <term type="translationMain">Vikasita­netrotpala­gandha­ketu­rāja</term>
+            <term xml:lang="Sa-Ltn" type="sourceUnspecified">vikasita­netrotpala­gandha­ketu­rāja</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">spyan rgyas pa ut+pa la’i bsung gi tog gi rgyal po</term>
                             <term xml:lang="bo" type="attestedSource" n="1">སྤྱན་རྒྱས་པ་ཨུཏྤ་ལའི་བསུང་གི་ཏོག་གི་རྒྱལ་པོ།</term>
                             <note type="definition">
@@ -2760,8 +2766,8 @@
                         <gloss type="person" xml:id="UT22084-090-036-284">
                             <term type="translationMain">Mahājana</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">mahājana</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ma ha dza na</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">མ་ཧ་ཛ་ན།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ma hA dza na</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">མ་ཧཱ་ཛ་ན།</term>
                             <note type="definition">
                                 <p>A Kashmiri paṇḍita active in Tibet in the eleventh century.
               </p>
@@ -2848,8 +2854,8 @@
             <gloss xml:id="UT22084-090-036-293" type="place" mode="match">
                             <term type="translationMain">Ganges</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">gaṅgā</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">gang ga</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">གང་ག</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">gang gA</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">གང་གཱ།</term>
                             <note type="definition" rend="override">
                                 <p>The sacred river of North India.</p>
                             </note>
