--- a/translations/kangyur/translations/090-037_toh593-the_invincible_sitatapatra_2.xml
+++ b/translations/kangyur/translations/090-037_toh593-the_invincible_sitatapatra_2.xml
@@ -32,7 +32,7 @@
         <editor role="finalReviewer" xml:id="UT22084-090-037-338">David Fiordalis</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.6 <date>2023</date>
+                <edition>v 1.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -191,6 +191,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-11-08T13:38:20.633Z" type="text-version" status="1.0.6" xml:id="UT22084-090-037-377">
                     <desc>Updated typo.</desc>
+                </change>
+                <change who="#celso" when="2023-12-14T18:58:24.012Z" type="text-version" status="1.0.7" xml:id="UT22084-090-037-378">
+                    <desc>added some soft hyphens to glossary</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -695,13 +698,13 @@
           <milestone unit="chunk" xml:id="UT22084-090-037-67"/>
           <lg tid="48">
             <l>“Homage to the blessed, thus-gone, worthy, completely perfect Buddha
-              Dṛḍhaśūraraṇasenapraharaṇarāja. </l>
+              Dṛḍha­śūraraṇasena­praharaṇa­rāja. </l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha Amitābha.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha Akṣobhya.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha
-              Bhaiṣajyaguruvaiḍūryaprabharāja.</l>
+              Bhaiṣajya­guru­vaiḍūrya­prabha­rāja.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha
-              Supuṣpitaśālendrārāja. Homage to the blessed, thus-gone, worthy, completely perfect
+              Supuṣpita­śālendrā­rāja. Homage to the blessed, thus-gone, worthy, completely perfect
               Buddha Śākyamuni.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha
               Ratnaketurāja.</l>
@@ -710,7 +713,7 @@
                         </l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha Vairocana. </l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha
-                Vikasitanetrotpalagandhaketurāja.<note place="end" xml:id="UT22084-090-037-68"> This
+                Vikasita­netrotpala­gandha­ketu­rāja.<note place="end" xml:id="UT22084-090-037-68"> This
                 Sanskrit rendering is tentative, as the Tibetan term used here differs slightly from
                 the Sanskrit sources. All Sanskrit sources consulted have
                 Vikasitakamalotpalagandhaketurāja, a term that aligns with the Tibetan translation
@@ -1332,7 +1335,7 @@
           <bibl xml:id="UT22084-090-037-162">Phangthangma (<title xml:lang="Bo-Ltn">dkar chag ’phang
               thang ma</title>). Beijing: mi rigs dpe skrun khang, 2003.</bibl>
           <bibl xml:id="UT22084-090-037-163">
-                        <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheBNF.php?vol=PT45&amp;beg=4">Pelliot tibétain 45</ref>. Bibliothèque nationale de France, Paris. <title xml:lang="en">Resources for Kanjur and Tenjur Studies</title>, Universität Wien.
+                        <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheBNF.php?vol=PT45&amp;beg=4">Pelliot tibétain 45</ref>. Bibliothèque nationale de France, Paris. <title xml:lang="en">Resources for Kanjur and Tanjur Studies</title>, Universität Wien.
             Accessed July 26, 2022.</bibl>
           <bibl xml:id="UT22084-090-037-164">Dudjom Jikdral Yeshé Dorjé (bdud ’joms ’jigs bral ye
             shes rdo rje). <title xml:lang="Bo-Ltn">gtsug tor gdugs dkar mo’i rgyun khyer ’bar ba’i
@@ -2316,8 +2319,8 @@
                     </item>
           <item>
                         <gloss type="person" xml:id="UT22084-090-037-257">
-                            <term type="translationMain">Dṛḍhaśūraraṇasenapraharaṇarāja</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">dṛḍhaśūraraṇasenapraharaṇarāja</term>
+                            <term type="translationMain">Dṛḍha­śūraraṇasena­praharaṇa­rāja</term>
+            <term xml:lang="Sa-Ltn" type="sourceUnspecified">dṛḍha­śūraraṇasena­praharaṇa­rāja</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dpa’ brtan pa’i sde mtshon cha’i rgyal po</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དཔའ་བརྟན་པའི་སྡེ་མཚོན་ཆའི་རྒྱལ་པོ།</term>
                             <note type="definition">
@@ -2351,8 +2354,8 @@
           </item>
           <item>
                         <gloss type="person" xml:id="UT22084-090-037-260">
-                            <term type="translationMain">Bhaiṣajyaguruvaiḍūryaprabharāja</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhaiṣajyaguruvaiḍūrya­prabharāja</term>
+                            <term type="translationMain">Bhaiṣajya­guru­vaiḍūrya­prabha­rāja</term>
+            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhaiṣajya­guru­vaiḍūrya­prabha­rāja</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sman gyi bla bai DUr+ya’i ’od kyi rgyal po</term>
                             <term xml:lang="bo" type="attestedSource" n="1">སྨན་གྱི་བླ་བཻ་ཌཱུརྱའི་འོད་ཀྱི་རྒྱལ་པོ།</term>
                             <note type="definition">
@@ -2363,8 +2366,8 @@
                     </item>
           <item>
                         <gloss type="person" xml:id="UT22084-090-037-261">
-                            <term type="translationMain">Supuṣpitaśālendrārāja</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">supuṣpita­śālendrārāja</term>
+                            <term type="translationMain">Supuṣpita­śālendrā­rāja</term>
+            <term xml:lang="Sa-Ltn" type="sourceUnspecified">supuṣpita­śālendrā­rāja</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sA la’i dbang po’i rgyal po me tog kun tu rgyas pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">སཱ་ལའི་དབང་པོའི་རྒྱལ་པོ་མེ་ཏོག་ཀུན་ཏུ་རྒྱས་པ།</term>
                             <note type="definition">
@@ -2421,8 +2424,8 @@
                     </item>
           <item>
                         <gloss type="person" xml:id="UT22084-090-037-266">
-                            <term type="translationMain">Vikasitanetrotpalagandhaketurāja</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">vikasitanetrotpala­gandhaketu­rāja</term>
+                            <term type="translationMain">Vikasita­netrotpala­gandha­ketu­rāja</term>
+            <term xml:lang="Sa-Ltn" type="sourceUnspecified">vikasita­netrotpala­gandha­ketu­rāja</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">spyan rgyas pa ut+pa la’i tog gi rgyal po</term>
                             <term xml:lang="bo" type="attestedSource" n="1">སྤྱན་རྒྱས་པ་ཨུཏྤ་ལའི་ཏོག་གི་རྒྱལ་པོ།</term>
                             <note type="definition">
