--- a/translations/kangyur/placeholders/067-002_toh263-the_sutra_on_patience_with_the_discipline_through_practicing_in_a_way_that_is_like_the_colour_of_the_sky.xml
+++ b/translations/kangyur/placeholders/067-002_toh263-the_sutra_on_patience_with_the_discipline_through_practicing_in_a_way_that_is_like_the_colour_of_the_sky.xml
@@ -22,11 +22,11 @@
                 <sponsor xml:id="UT22084-067-002-10">Gu Yun and  Family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2023</date>
+                <edition>v 0.0.15 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-067-002"/>
                 <date/>
             </publicationStmt>
@@ -95,6 +95,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-29T10:20:07.832Z" type="text-version" status="0.0.14" xml:id="UT22084-067-002-35">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-15T11:09:30.73Z" type="translation-status" status="2.c" xml:id="UT22084-067-002-36">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-15T11:09:30.73Z" type="text-version" status="0.0.15" xml:id="UT22084-067-002-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
