--- a/translations/tengyur/placeholders/174-007_toh4209-hetucakradamaru.xml
+++ b/translations/tengyur/placeholders/174-007_toh4209-hetucakradamaru.xml
@@ -7,18 +7,24 @@
                 <title xml:lang="bo" type="mainTitle">གཏན་ཚིགས་ཀྱི་འཁོར་ལོ་གཏན་ལ་དབབ་པ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">gtan tshigs kyi 'khor lo gtan la dbab pa/</title>
                 <title xml:lang="Sa-Ltn" type="mainTitle">Hetu­cakra­vimārṣa</title>
+                <title xml:lang="Sa-Ltn" type="otherTitle">Hetu­cakraḍamaru</title>
                 <title xml:lang="en" type="mainTitle">The Final Wheel of Logical Reasons</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.2 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT23703-174-007"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh4209" type="text">
                     <ref>Toh 4209</ref>
                     <biblScope>ff. 93r-93r</biblScope>
-                    <author ref="eft:entity-17497" xml:lang="Sa-Ltn">Dignāga</author>
-                    <author role="translatorTib" ref="eft:entity-18548" xml:lang="Bo-Ltn">dge slong d+harma a lo ka</author>
-                    <author role="translatorTib" ref="eft:entity-18549" xml:lang="Sa-Ltn">Za­hor Bodhisattva</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-174-007-1">Dignāga</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-174-007-2">dge slong d+harma a lo ka</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-174-007-3">Za­hor Bodhisattva</author>
                     <location work="UT23703" count-pages="2">
                         <volume number="174" start-page="185" end-page="186"/>
                     </location>
@@ -26,12 +32,22 @@
                     <idno source-id="O1JC76301JC10964" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 10:27:26 by admin</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-4203-4268_PH_new_v2.4.xml" date-time="2021-11-02T14:20:22.423Z" user="admin"/>
-                <note type="updated" update="title" import="tengyur-data-4203-4268_PH_new_v2.4.xml" date-time="2021-11-02T14:20:22.423Z" user="admin">The Sanskrit title provided in the Tibetan text (hetucakra-hamārtha) appears to be corrupt. The Tibetan gtan la dbab pa suggests reading it as
-            °-vimārṣa.</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T14:20:22.423Z" type="import" xml:id="UT23703-174-007-4" source="tengyur-data-4203-4268_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2021-11-02T14:20:22.423Z" type="title" xml:id="UT23703-174-007-5" source="tengyur-data-4203-4268_PH_new_v2.4.xml">
+                    <desc>The Sanskrit title provided in the Tibetan text (hetucakra-hamārtha) appears to be corrupt. The Tibetan gtan la dbab pa suggests reading it as
+            °-vimārṣa.</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-174-007-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#john" when="2023-12-16T16:14:02.146Z" type="text-version" status="0.0.2" xml:id="UT23703-174-007-7">
+                    <desc>Added other Skt title.</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
