--- a/translations/kangyur/placeholders/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
+++ b/translations/kangyur/placeholders/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
@@ -10,21 +10,22 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Rājādeśanāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-062-014-1">Sakya Pandita Translation Group</author>
-                <consultant role="dharmaMaster" xml:id="UT22084-062-014-2">Ven. Khenpo Kalsang Gyaltsen</consultant>
-                <author role="translatorEng" xml:id="UT22084-062-014-3">Ven. Khenpo Kalsang Gyaltsen</author>
-                <author role="translatorEng" xml:id="UT22084-062-014-4">Rev. Dr. Ani Kunga Chodron</author>
-                <consultant role="projectManager" xml:id="UT22084-062-014-5">Rev. Dr. Ani Kunga Chodron</consultant>
+                <consultant role="dharmaMaster" xml:id="UT22084-062-014-2">Khenpo Kalsang Gyaltsen</consultant>
+                <author role="translatorEng" xml:id="UT22084-062-014-3">Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" xml:id="UT22084-062-014-4">Chodrungma Kunga Chodron</author>
+                <consultant role="projectManager" xml:id="UT22084-062-014-5">Chodrungma Kunga Chodron</consultant>
                 <editor role="projectEditor" xml:id="UT22084-062-014-6">George FitzHerbert</editor>
                 <editor role="projectEditor" xml:id="UT22084-062-014-21">David Fiordalis</editor>
                 <editor role="copyEditor" xml:id="UT22084-062-014-34">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-062-014-49">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2023</date>
+                <edition>v 0.0.15 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-062-014"/>
                 <date/>
             </publicationStmt>
@@ -93,6 +94,18 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-29T09:48:24.619Z" type="text-version" status="0.0.12" xml:id="UT22084-062-014-39">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-29T09:49:23.151Z" type="text-version" status="0.0.13" xml:id="UT22084-062-014-40">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-13T11:55:44.264Z" type="text-version" status="0.0.14" xml:id="UT22084-062-014-50">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-18T09:42:18.392Z" type="translation-status" status="2.b" xml:id="UT22084-062-014-51">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-18T09:42:18.392Z" type="text-version" status="0.0.15" xml:id="UT22084-062-014-52">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
