--- a/translations/kangyur/placeholders/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
+++ b/translations/kangyur/placeholders/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
@@ -10,21 +10,22 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Rājādeśanāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-062-015-1">Sakya Pandita Translation Group</author>
-                <consultant role="dharmaMaster" xml:id="UT22084-062-015-2">Ven. Khenpo Kalsang Gyaltsen</consultant>
-                <consultant role="projectManager" xml:id="UT22084-062-015-3">Rev. Dr. Ani Kunga Chodron</consultant>
-                <author role="translatorEng" xml:id="UT22084-062-015-4">Ven. Khenpo Kalsang Gyaltsen</author>
-                <author role="translatorEng" xml:id="UT22084-062-015-5">Rev. Dr. Ani Kunga Chodron</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-062-015-2">Khenpo Kalsang Gyaltsen</consultant>
+                <consultant role="projectManager" xml:id="UT22084-062-015-3">Chodrungma Kunga Chodron</consultant>
+                <author role="translatorEng" xml:id="UT22084-062-015-4">Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" xml:id="UT22084-062-015-5">Chodrungma Kunga Chodron</author>
                 <editor role="projectEditor" xml:id="UT22084-062-015-6">George FitzHerbert</editor>
                 <editor role="projectEditor" xml:id="UT22084-062-015-24">David Fiordalis</editor>
                 <editor role="copyEditor" xml:id="UT22084-062-015-37">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-062-015-52">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.16 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-062-015"/>
                 <date/>
             </publicationStmt>
@@ -102,6 +103,18 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-29T09:53:28.94Z" type="text-version" status="0.0.13" xml:id="UT22084-062-015-42">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-29T09:54:35.835Z" type="text-version" status="0.0.14" xml:id="UT22084-062-015-43">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-13T11:56:32.532Z" type="text-version" status="0.0.15" xml:id="UT22084-062-015-53">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-18T09:51:50.662Z" type="translation-status" status="2.b" xml:id="UT22084-062-015-54">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-18T09:51:50.662Z" type="text-version" status="0.0.16" xml:id="UT22084-062-015-55">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
