--- a/translations/kangyur/placeholders/061-020_toh200-the_sutra_on_concordance_with_the_world.xml
+++ b/translations/kangyur/placeholders/061-020_toh200-the_sutra_on_concordance_with_the_world.xml
@@ -5,18 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">'jig rten gyi rjes su mthun par 'jug pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">lokānuvartanasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Lokānuvartanasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra on Concordance with the World</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa 'jig rten gyi rjes su mthun par 'jug pa zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryalokānuvartana­nāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-27"/>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryalokānuvartana­nāmamahāyānasūtra</title>
+                <author role="translatorMain" xml:id="UT22084-061-020-1"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-061-020"/>
                 <date/>
             </publicationStmt>
@@ -31,12 +32,30 @@
                     <idno source-id="O1JC114941JC11828" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-14T15:32:23.267Z" user="admin">14/12/2022 15:32:23</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-25T10:16:42.43Z" user="john">added a note about the text</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-12-14T15:32:17.484Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-14T15:32:17.484Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-061-020-2">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#john" when="2020-10-25T10:16:42.43Z" type="text-version" status="0.0.2" xml:id="UT22084-061-020-3">
+                    <desc>added a note about the text</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-14T15:32:17.484Z" type="translation-status" status="2.h" xml:id="UT22084-061-020-4">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-14T15:32:17.484Z" type="text-version" status="0.0.3" xml:id="UT22084-061-020-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-061-020-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-18T10:17:12.144Z" type="translation-status" status="2.g" xml:id="UT22084-061-020-7">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-18T10:17:12.144Z" type="text-version" status="0.0.5" xml:id="UT22084-061-020-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
