--- a/translations/kangyur/translations/072-029_toh329-the_sutra_of_the_god.xml
+++ b/translations/kangyur/translations/072-029_toh329-the_sutra_of_the_god.xml
@@ -23,7 +23,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-029-233">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -156,6 +156,9 @@
                 </change>
                 <change who="#konchog" when="2023-12-06T17:07:37.616Z" type="text-version" status="1.0.1" xml:id="UT22084-072-029-237">
                     <desc>A few small punctuation fixes in the translation, and substantial revision to note 20 after consultation with AD and JC.</desc>
+                </change>
+                <change who="#andre" when="2023-12-18T19:44:18.272Z" type="text-version" status="1.0.2" xml:id="UT22084-072-029-238">
+                    <desc>Glossary matching revised - activated in CG</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -879,7 +882,7 @@
                                         <bibl xml:id="UT22084-072-029-179">Tan Chung, ed. <title xml:lang="en">Dunhuang Art Through the Eyes of Duan Wenjie</title>. New Delhi: Indira Gandhi Centre for the Arts, 1994.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-072-029-181">
