--- a/translations/kangyur/translations/072-030_toh330-the_smaller_sutra_of_the_god.xml
+++ b/translations/kangyur/translations/072-030_toh330-the_smaller_sutra_of_the_god.xml
@@ -24,7 +24,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-030-195">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -164,6 +164,9 @@
                 </change>
                 <change who="#konchog" when="2023-12-06T17:09:19.662Z" type="text-version" status="1.0.2" xml:id="UT22084-072-030-200">
                     <desc>A few small fixes, including eliminating the redundancy of George being named twice in the acknowledgements as editor.</desc>
+                </change>
+                <change who="#andre" when="2023-12-18T20:28:25.263Z" type="text-version" status="1.0.3" xml:id="UT22084-072-030-201">
+                    <desc>Glossary revised - activated in CG</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -977,6 +980,7 @@
                                         <item>
                         <gloss type="term" xml:id="UT22084-072-030-155">
                                                   <term type="translationMain">telling lies</term>
+                                                  <term type="translationAlternative">tell lies</term>
                                                   <term status="verified" xml:lang="Bo-Ltn" n="1">brdzun gyi tshig
                                                   smra ba </term>
                                                   <term xml:lang="bo" n="1">བརྫུན་གྱི་ཚིག་སྨྲ་བ།</term>
@@ -1167,7 +1171,7 @@
                                                   <term status="verified" xml:lang="Bo-Ltn" n="1">mgon med zas sbyin </term>
                                                   <term xml:lang="bo" n="1">མགོན་མེད་ཟས་སྦྱིན།</term>
                                                   <term status="verified" xml:lang="Sa-Ltn">anāthapiṇḍada</term>
-                                                  <note type="definition">
+                                                  <note type="definition" rend="override">
                                 <p>Anāthapiṇḍada was a
                                                   wealthy merchant in the town of Śrāvastī. Famous
                                                   for his generosity to the poor, he became a patron
