--- a/translations/kangyur/translations/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
+++ b/translations/kangyur/translations/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
@@ -23,7 +23,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-101-122-96">Andreas Doctor</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -132,6 +132,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-12-08T13:29:28.127Z" type="text-version" status="1.0.2" xml:id="UT22084-101-122-101">
                     <desc>Updated acknowledgements.</desc>
+                </change>
+                <change who="#andre" when="2023-12-18T20:36:23.274Z" type="text-version" status="1.0.3" xml:id="UT22084-101-122-102">
+                    <desc>Glossary matching revised - activated in CG</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -470,7 +473,7 @@
             McKeown. Boston: Brill, 2010.</bibl>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
           <item>
                         <gloss type="term" xml:id="UT22084-101-122-50">
