--- a/translations/kangyur/placeholders/090-023_toh579,935-the_incantation_the_essence_of_the_six_perfections.xml
+++ b/translations/kangyur/placeholders/090-023_toh579,935-the_incantation_the_essence_of_the_six_perfections.xml
@@ -10,14 +10,15 @@
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī, the Essence of the Six Perfections</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin drug gi snying po'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug gi snying po'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-7">Paul Hackett</author>
+                <author role="translatorMain" xml:id="UT22084-090-023-1"/>
+                <author role="translatorEng" xml:id="UT22084-090-023-2">Paul Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-090-023"/>
                 <date/>
             </publicationStmt>
@@ -41,14 +42,33 @@
                     <idno source-id="O1JC114941JC12697" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-19T14:02:17.959Z" user="admin">19/06/2023 14:02:17</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:15:23.755Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:15:23.755Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:17:18.115Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2023-06-19T14:02:13.706Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-06-19T14:02:13.706Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-12-16T10:15:23.755Z" type="translation-status" status="3" xml:id="UT22084-090-023-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T10:15:23.755Z" type="text-version" status="0.0.1" xml:id="UT22084-090-023-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T10:17:18.115Z" type="text-version" status="0.0.2" xml:id="UT22084-090-023-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T14:02:13.706Z" type="translation-status" status="2.h" xml:id="UT22084-090-023-6">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T14:02:13.706Z" type="text-version" status="0.0.3" xml:id="UT22084-090-023-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-090-023-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-19T16:10:10.116Z" type="translation-status" status="2.g" xml:id="UT22084-090-023-9">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-19T16:10:10.116Z" type="text-version" status="0.0.5" xml:id="UT22084-090-023-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
