--- a/translations/kangyur/placeholders/090-028_toh584,940-the_incantation_that_captures_the_avatamsaka.xml
+++ b/translations/kangyur/placeholders/090-028_toh584,940-the_incantation_that_captures_the_avatamsaka.xml
@@ -10,14 +10,15 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa phal po che bzung bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa phal po che gzung bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">phal po che gzung ba'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-7">Paul Hackett</author>
+                <author role="translatorMain" xml:id="UT22084-090-028-1"/>
+                <author role="translatorEng" xml:id="UT22084-090-028-2">Paul Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-090-028"/>
                 <date/>
             </publicationStmt>
@@ -41,14 +42,33 @@
                     <idno source-id="O1JC114941JC12702" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-19T14:07:41.186Z" user="admin">19/06/2023 14:07:41</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:23:40.423Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:23:40.423Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:24:28.022Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2023-06-19T14:07:36.898Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-06-19T14:07:36.898Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-12-16T10:23:40.423Z" type="translation-status" status="3" xml:id="UT22084-090-028-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T10:23:40.423Z" type="text-version" status="0.0.1" xml:id="UT22084-090-028-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T10:24:28.022Z" type="text-version" status="0.0.2" xml:id="UT22084-090-028-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T14:07:36.898Z" type="translation-status" status="2.h" xml:id="UT22084-090-028-6">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T14:07:36.898Z" type="text-version" status="0.0.3" xml:id="UT22084-090-028-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-090-028-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-19T16:14:35.261Z" type="translation-status" status="2.g" xml:id="UT22084-090-028-9">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-19T16:14:35.261Z" type="text-version" status="0.0.5" xml:id="UT22084-090-028-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
