--- a/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
+++ b/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
@@ -5,9 +5,9 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī that Cleanses All the Obscurations of Karma</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sarvakarmāvaraṇaviśodhanī dhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Sarvakarmāvaraṇaviśodhanī dhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">las sgrib thams cad rnam par sbyong ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasarva­karmāvaraṇaviśodhanī­nāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarva­karmāvaraṇaviśodhanī­nāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa las kyi sgrib pa thams cad rnam par sbyong ba zhes bya ba'i gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-094-020-1">Buddhapīṭha Translation Group</author>
                 <consultant role="projectManager" xml:id="UT22084-094-020-2">Péter-Dániel Szántó</consultant>
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-094-020-18">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2023</date>
+                <edition>v 0.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-094-020"/>
                 <date/>
             </publicationStmt>
@@ -80,6 +80,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-25T12:49:42.18Z" type="text-version" status="0.0.8" xml:id="UT22084-094-020-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-21T09:00:00.847Z" type="translation-status" status="2.d" xml:id="UT22084-094-020-22">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-21T09:00:00.847Z" type="text-version" status="0.0.9" xml:id="UT22084-094-020-23">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
