--- a/translations/kangyur/placeholders/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
+++ b/translations/kangyur/placeholders/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
@@ -20,12 +20,12 @@
                 <editor role="projectEditor" xml:id="UT22084-062-014-49">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.15 <date>2023</date>
+                <edition>v 0.0.16 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-062-014"/>
                 <date/>
             </publicationStmt>
@@ -106,6 +106,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-18T09:42:18.392Z" type="text-version" status="0.0.15" xml:id="UT22084-062-014-52">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-21T15:33:53.414Z" type="translation-status" status="2.a" xml:id="UT22084-062-014-53">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-21T15:33:53.414Z" type="text-version" status="0.0.16" xml:id="UT22084-062-014-54">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
