--- a/translations/tengyur/placeholders/203-010_toh4321a-arya_bya_ka_ra_nai_nang_nas_byung_ba_gza_dang_rgyu_skra_gyi_rang_bzhin_bshad_pa.xml
+++ b/translations/tengyur/placeholders/203-010_toh4321a-arya_bya_ka_ra_nai_nang_nas_byung_ba_gza_dang_rgyu_skra_gyi_rang_bzhin_bshad_pa.xml
@@ -8,14 +8,19 @@
                 <title xml:lang="Bo-Ltn" type="mainTitle">Ar+ya sha rdu la kar+Na'i nang nas 'byung ba gza' dang rgyu skra gyi rang bzhin bshad pa/</title>
                 <title xml:lang="en" type="mainTitle">An Explanation of the Nature of the Planets and Astrological Houses Found in [the Life-story of] Ārya Śārdūlakarṇa</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-203-010"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh4321a" type="text">
                     <ref>Toh 4321a</ref>
                     <biblScope>ff. 33v-49r</biblScope>
-                    <author ref="eft:entity-17509" xml:lang="en">Anon</author>
+                    <author xml:lang="en" xml:id="UT23703-203-010-1">Anon</author>
                     <location work="UT23703" count-pages="32">
                         <volume number="203" start-page="66" end-page="97"/>
                     </location>
@@ -24,12 +29,25 @@
                 </bibl>
                 <link type="isCommentaryOf" target="toh358"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-03-02T09:06:31.948Z" user="admin">02/03/2021 09:06:31</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-4313-4327_PH_new_v2.4.xml" date-time="2021-11-02T14:24:31.87Z" user="admin"/>
-                <note type="updated" update="title" import="tengyur-data-4313-4327_PH_new_v2.4.xml" date-time="2021-11-02T14:24:31.87Z" user="admin">The opening statement gives the title as “... from within the Ārya Grammar” (ārya byā ka ra ṇa'i nang nas ...) which is clearly wrong. The colophon provides
-            the almost correct title “... from within [the life-story of] Ārya Śārdūlakarṇa” (ārya sha r[d]u la karṇa’i nang nas ...), i.e. the Śārdūlakarṇāvadāna (Toh. 358).</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T14:24:31.87Z" type="import" xml:id="UT23703-203-010-2" source="tengyur-data-4313-4327_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2021-11-02T14:24:31.87Z" type="title" xml:id="UT23703-203-010-3" source="tengyur-data-4313-4327_PH_new_v2.4.xml">
+                    <desc>The opening statement gives the title as “... from within the Ārya Grammar” (ārya byā ka ra ṇa'i nang nas ...) which is clearly wrong. The colophon provides
+            the almost correct title “... from within [the life-story of] Ārya Śārdūlakarṇa” (ārya sha r[d]u la karṇa’i nang nas ...), i.e. the Śārdūlakarṇāvadāna (Toh. 358).</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-203-010-4">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-22T09:47:02.804Z" type="translation-status" status="3" xml:id="UT23703-203-010-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-22T09:47:02.804Z" type="text-version" status="0.0.1" xml:id="UT23703-203-010-6">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
