--- a/translations/kangyur/translations/091-043_toh646,1080-the_dharani_of_refuge_for_the_preta_flaming_mouth.xml
+++ b/translations/kangyur/translations/091-043_toh646,1080-the_dharani_of_refuge_for_the_preta_flaming_mouth.xml
@@ -36,7 +36,7 @@
                                         Canti</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.4 <date>2023</date>
+                <edition>v 1.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -45,7 +45,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="1.a">
+                                <availability status="1">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -185,6 +185,12 @@
                 </change>
                 <change who="#andre" when="2023-11-24T16:17:36.383Z" type="text-version" status="1.0.4" xml:id="UT22084-091-043-1224">
                     <desc>Glossary revised and integrated in CG</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T13:44:22.206Z" type="translation-status" status="1" xml:id="UT22084-091-043-1225">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T13:44:22.206Z" type="text-version" status="1.0.5" xml:id="UT22084-091-043-1226">
+                    <desc>Included in App v 3.9</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
