--- a/translations/kangyur/translations/091-064_toh667-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/translations/091-064_toh667-the_tantra_of_mahakala.xml
@@ -23,7 +23,7 @@
         <editor role="finalReviewer" xml:id="UT22084-091-064-265">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.7 <date>2023</date>
+                <edition>v 1.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -31,7 +31,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="1.a">
+        <availability status="1">
           <p type="tantricRestriction">
                         <emph rend="bold">Warning:</emph> Readers are reminded that
             according to Vajrayāna Buddhist tradition there are restrictions and commitments
@@ -177,6 +177,12 @@
                 </change>
                 <change who="#andre" when="2023-11-28T22:02:02.851Z" type="text-version" status="1.0.7" xml:id="UT22084-091-064-278">
                     <desc>glossary integration in CG revised - activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T15:31:54.925Z" type="translation-status" status="1" xml:id="UT22084-091-064-279">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T15:31:54.925Z" type="text-version" status="1.0.8" xml:id="UT22084-091-064-280">
+                    <desc>Included in App v 3.9</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
