--- a/translations/kangyur/translations/091-066_toh669,1086-the_incantation_of_mahakala_deliverance_from_all_epidemic_fevers.xml
+++ b/translations/kangyur/translations/091-066_toh669,1086-the_incantation_of_mahakala_deliverance_from_all_epidemic_fevers.xml
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-066-137">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -38,7 +38,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="1.a">
+                                <availability status="1">
                                         <p type="tantricRestriction">
                         <emph rend="bold">Warning:</emph> Readers are reminded that
                                                 according to Vajrayāna Buddhist tradition there are
@@ -190,6 +190,12 @@
                 </change>
                 <change who="#andre" when="2023-11-29T07:50:11.781Z" type="text-version" status="1.0.3" xml:id="UT22084-091-066-144">
                     <desc>glossary integration in CG revised - activated</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T15:42:31.547Z" type="translation-status" status="1" xml:id="UT22084-091-066-145">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T15:42:31.547Z" type="text-version" status="1.0.4" xml:id="UT22084-091-066-146">
+                    <desc>Included in App v 3.9</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
