--- a/translations/kangyur/translations/091-067_toh670,1087-incantation_of_mahakali.xml
+++ b/translations/kangyur/translations/091-067_toh670,1087-incantation_of_mahakali.xml
@@ -34,7 +34,7 @@
                                         Doctor</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.5 <date>2023</date>
+                <edition>v 1.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -43,7 +43,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="1.a">
+                                <availability status="1">
                                         <p type="tantricRestriction">
                         <emph rend="bold">Warning:</emph> Readers are reminded that
                                                 according to Vajrayāna Buddhist tradition there are
@@ -203,6 +203,12 @@
                 </change>
                 <change who="#andre" when="2023-11-29T08:00:04.269Z" type="text-version" status="1.0.5" xml:id="UT22084-091-067-151">
                     <desc>glossary integration in CG revised - activated</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T15:46:59.496Z" type="translation-status" status="1" xml:id="UT22084-091-067-152">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T15:46:59.496Z" type="text-version" status="1.0.6" xml:id="UT22084-091-067-153">
+                    <desc>Included in App v 3.9</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
