--- a/translations/kangyur/translations/048-001_toh101-upholding_the_roots_of_virtue.xml
+++ b/translations/kangyur/translations/048-001_toh101-upholding_the_roots_of_virtue.xml
@@ -32,7 +32,7 @@
                     Sentient Beings</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.24 <date>2023</date>
+                <edition>v 1.2.25 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -176,6 +176,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-23T20:52:05.79Z" type="text-version" status="1.2.24" xml:id="UT22084-048-001-4519">
                     <desc>updated ellipsis.</desc>
+                </change>
+                <change who="#andre" when="2024-01-02T10:34:51.813Z" type="text-version" status="1.2.25" xml:id="UT22084-048-001-4520">
+                    <desc>Definition for kalandaka­nivāpa replaced with standard definition</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -17493,7 +17496,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śrāvaka</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">nyan thos</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཉན་ཐོས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Primarily referring to those disciples of the
                                 Buddha who aspire to attain the state of an arhat by seeking self
                                 liberation. It is usually defined as “those who hear the teaching
@@ -17808,7 +17811,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">trisāhasra­mahā­sāhasra­loka­dhātu</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">stong gsum gyi stong chen po</term>
                             <term xml:lang="bo" type="attestedSource" n="1">སྟོང་གསུམ་གྱི་སྟོང་ཆེན་པོ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The largest universe spoken of in Buddhist
                                 cosmology, consisting of one billion smaller world systems. </p>
                             </note>
@@ -17921,7 +17924,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">lokāyata</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">’jig rten rgyang phen pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">འཇིག་རྟེན་རྒྱང་ཕེན་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>An ancient Indian tradition of thought and
                                 practice that denies the existence of past and future lives.</p>
                             </note>
@@ -18056,7 +18059,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">samādhi</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ting nge ’dzin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཏིང་ངེ་འཛིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A general term for states of deep <term rend="ignore">concentration</term>. One of the synonyms for
                                 meditation, referring in particular to a state of complete <term rend="ignore">concentration</term> or focus.</p>
                             </note>
@@ -18572,7 +18575,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">akṣobhya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mi ’khrugs pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མི་འཁྲུགས་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A buddha.</p>
                             </note>
                         </gloss>
@@ -26692,7 +26695,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śāradvatī­putra</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sha ra dwa ti’i bu</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཤ་ར་དྭ་ཏིའི་བུ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>More widely known as Śāriputra—the contracted
                                 version of his name—he was one of the Buddha’s foremost hearer
                                 disciples. Renowned for unparalleled knowledge of the
@@ -31267,7 +31270,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">sahaloka</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mi mjed pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མི་མཇེད་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The buddha realm of the Buddha Śākyamuni.</p>
                             </note>
                         </gloss>
@@ -31827,7 +31830,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">jambudvīpa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">’dzam bu’i gling</term>
                             <term xml:lang="bo" type="attestedSource" n="1">འཛམ་བུའི་གླིང་།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The continent to the south of Mount Sumeru,
                                 according to Abhidharma cosmology, which is the continent (<foreign xml:lang="Sa-Ltn" type="term">dvīpa</foreign>) on which we
                                 live.</p>
@@ -31906,7 +31909,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">tuṣitā</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dga’ ldan</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དགའ་ལྡན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A god realm.</p>
                             </note>
                         </gloss>
@@ -31917,7 +31920,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">kalandaka­nivāpa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">bya ka lan da ka gnas</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">བྱ་ཀ་ལན་ད་ཀ་གནས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Literally, “The Squirrel Feeding Ground.” A location within the Veṇuvana where the Buddha stayed. The place received its name from the flying squirrels who were fed there by royal order. It should be noted that Tibetan translations understand the Sanskrit term <foreign type="term" xml:lang="Sa-Ltn">kalandaka</foreign> to be a kind of bird (Tib. <foreign type="term" xml:lang="Bo-Ltn">bya</foreign>). </p>
                             </note>
                         </gloss>
@@ -32163,7 +32166,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">magadha</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ma ga dha</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མ་ག་དྷ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A kingdom of ancient India, home to the Vajra
                                 Seat.</p>
                             </note>
